--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
 mypy==1.10.0
+click
 state-machine==0.2.10
 pyparsing==3.1.4
 cowpy==1.1.5
+grpcio==1.66.1
+grpcio-tools==1.66.1
+lanarky[openai]==0.8.6
+uvicorn==0.29.0
+localstack==3.7.2
+awscli==1.34.15
+awscli-local==0.22.0
+eventsourcing==9.3.2
